# aurelia

./: Cargo.toml  Justfile  README.md  docker-compose.yaml  generate_entities.sh  migrate.sh  run.sh
api/: Cargo.toml  migrate.sh
api/etc/: aurelia.toml
api/src/: application.rs  cli.rs  configuration.rs  lib.rs  main.rs  routes.rs
api/src/database_migrations/: V1__create_tag.rs  V5__recipe_ingredient.rs
api/src/handler/: authentication.rs
api/tests/api/: client.rs  util.rs
api/tests/api/handler/: ingredient.rs  mod.rs  tag.rs
etc/: aurelia.toml
frontend/: package-lock.json  package.json  postcss.config.js  tailwind.config.js
frontend/components/: ActiveLink.tsx  Layout.tsx
frontend/pages/: _app.tsx  index.tsx  plan.tsx  week.tsx
frontend/pages/recipes/: index.tsx
src/: application.rs  cli.rs  configuration.rs  lib.rs  main.rs  migrate.rs  routes.rs  telemetry.rs  template.rs
src/database/: mod.rs  model.rs
src/database/entity/: ingredient.rs  ingredient_tag.rs  mod.rs  prelude.rs  recipe.rs  recipe_ingredient.rs  tag.rs  user.rs
src/database_migrations/: V2__create_recipe.rs  V3__ingredient_tag.rs  V4__user.rs  V5__dummy_data.sql  V6__dummy_data.sql  mod.rs
src/driver/: db.rs
src/handler/: authentication.rs  mod.rs
src/middleware/: authentication.rs  mod.rs  request_context.rs
src/migrations/: V1__create_tag.rs  V2__create_recipe.rs
src/testing/: client.rs  mod.rs  util.rs
tests/api/: client.rs  main.rs  util.rs
tests/api/handler/: authentication.rs  ingredient.rs  recipe.rs  tag.rs
