# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "aurelia"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.4", features = ["headers"] }
config = "0.12"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
log = "0.4"
fast_log = "1.3"
futures = "0.3"
headers = "0.3"
hyper = "0.14"
jsonwebtoken = "8"
once_cell = "1.8"
openidconnect = "2"
openssl = "0.10"
refinery = { features = ["tokio-postgres"], version = "0.8" }
reqwest = { version = "0.11", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sql-press = { path = "../sql-press" }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "json"]}
structopt = "0.3"
tera = "1.15"
tokio = { version = "1.0", features = ["full"] }
tracing = { version = "0.1" }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.5"
tower = "0.4"
tower-http = { version = "0.2", features = ["fs"]}
uuid = { version = "0.8", features = ["v4", "serde"] }

[dev-dependencies]
