# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "aurelia"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.5", features = ["headers"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"
dyn-clonable = "0.9"
fast_log = "1.3"
futures = "0.3"
headers = "0.3"
hyper = "0.14"
jsonwebtoken = "8"
lazy_static = "1.4"
log = "0.4"
once_cell = "1.8"
# the additional feature 'accept-rfc3339-timestamps' is needed because the auth0
# `updated_at` id token value is not a spec conform timestamp but a rfc date.
# ticket on GH is: https://github.com/ramosbugs/openidconnect-rs/issues/23
openidconnect = { version = "2", features = ["accept-rfc3339-timestamps"] }
openssl = "0.10"
refinery = { features = ["tokio-postgres"], version = "0.8" }
reqwest = { version = "0.11", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sql-press = { git = "https://github.com/elbart/sql-press" }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "json"]}
tera = "1.15"
tokio = { version = "1.18", features = ["full"] }
toml = "0.5"
tower = "0.4"
tower-http = { version = "0.3", features = ["fs"]}
tracing = { version = "0.1" }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "0.8", features = ["v4", "serde"] }

[dev-dependencies]
